force-app/main/default/objects/Department__mdt/Department__mdt.object-meta.xml
<CustomObject>
    <label>Department</label>
    <pluralLabel>Departments</pluralLabel>
</CustomObject>