force-app/main/default/objects/Department__mdt/fields/Bonus_amount__c.field-meta.xml
<CustomField>
    <fullName>Bonus_amount__c</fullName>
    <label>Bonus amount for «Best doctor»</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>