force-app/main/default/objects/Department__mdt/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Gastroenterology</fullName>
                <default>true</default>
                <label>Gastroenterology</label>
            </value>
            <value>
                <fullName>Psychiatric</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Therapy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>