force-app/main/default/objects/Department__mdt/fields/Main_department__c.field-meta.xml
<CustomField>
    <fullName>Main_department__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main department?</label>
    <type>Checkbox</type>
</CustomField>